# calude_project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
calculator/: README.md  package.json  server.js
calculator/public/: app.js  calculator.js  index.html  style.css
calculator/test/: calculator.test.js
src/app/: __init__.py  cli.py
tests/: test_cli.py
